--- a/Our Services.html
+++ b/Our Services.html
@@ -1511,7 +1511,7 @@
         <p>Hubungi kami sekarang untuk reservasi mudah dan cepat.</p>
         <button
           class="btn btn-light btn-lg px-5 py-3"
-          onclick="window.open('https://wa.me/628118878485?text=Saya%20ingin%20booking%20treatment%20di%20FMBC', '_blank')"
+          onclick="window.open('https:wa.me/628128415338?text=Saya%20ingin%20booking%20treatment%20di%20FMBC', '_blank')"
         >
           <i class="fab fa-whatsapp me-2"></i> Chat WhatsApp
         </button>
@@ -1521,14 +1521,14 @@
     <!-- Floating Buttons -->
     <div class="float-btn">
       <a
-        href="https://wa.me/628118878485"
+        href="https://wa.me/628128415338"
         class="wa"
         target="_blank"
         title="WhatsApp"
       >
         <i class="fab fa-whatsapp"></i>
       </a>
-      <a href="tel:+628118878485" class="call" title="Call">
+      <a href="tel:+628128415338" class="call" title="Call">
         <i class="fa-solid fa-phone"></i>
       </a>
     </div>
@@ -1556,9 +1556,9 @@
 
       // Book Now function
       function bookNow(treatment) {
-        const message = `Halo, saya ingin booking ${treatment}. Bisa bantu jadwal?`;
+        const message = `Halo, saya (Nama Bunda) ingin booking ${treatment}. Bisa bantu jadwal?`;
         window.open(
-          `https://wa.me/628118878485?text=${encodeURIComponent(message)}`,
+          `https://wa.me/628128415338?text=${encodeURIComponent(message)}`,
           "_blank"
         );
       }
