--- a/index.html
+++ b/index.html
@@ -466,13 +466,10 @@
               <a class="nav-link" href="#facility">Fasilitas</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#services">Our Services</a>
+              <a class="nav-link" href="#services">Treatment</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#location">Lokasi</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#booking">Booking</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="survey/survey.html"
@@ -484,6 +481,51 @@
       </div>
     </nav>
 
+    <!-- Promotion Popup - Hanya Gambar (seperti anakode.id) -->
+    <div
+      id="promoPopup"
+      class="position-fixed top-0 start-0 w-100 h-100 d-none"
+      style="
+        background: rgba(0, 0, 0, 0.65);
+        z-index: 9999;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 15px;
+      "
+    >
+      <div class="position-relative" style="max-width: 500px; width: 95%">
+        <!-- Tombol Tutup -->
+        <button
+          type="button"
+          onclick="document.getElementById('promoPopup').classList.add('d-none')"
+          class="position-absolute bg-transparent border-0 text-black fs-1 fw-bold"
+          style="
+            top: 10px;
+            right: 10px;
+            z-index: 10;
+            text-shadow: 0 0 15px rgba(0, 0, 0, 0.8);
+            line-height: 1;
+            padding: 0;
+            outline: none;
+            cursor: pointer;
+          "
+          onmouseover="this.style.transform='scale(2)'"
+          onmouseout="this.style.transform='scale(1)'"
+        >
+          ×
+        </button>
+
+        <!-- Gambar Promosi Saja -->
+        <img
+          src="asset/promo 17-21 november 2025.png"
+          alt="Poster promo"
+          class="img-fluid rounded-4 shadow-lg"
+          style="width: 100%; height: auto"
+        />
+      </div>
+    </div>
+
     <!-- Hero -->
     <section id="home" class="hero fade-in">
       <div class="container">
@@ -492,7 +534,9 @@
           Farah Mom & Baby Care menghadirkan perawatan terbaik bagi ibu dan bayi
           Anda.
         </p>
-        <a href="#services" class="btn btn-main">Lihat Layanan Kami</a>
+        <a href="https://wa.me/628128415338" class="btn btn-main"
+          >Pesan Sekarang</a
+        >
       </div>
     </section>
 
@@ -504,9 +548,9 @@
       </p>
       <div class="container">
         <div class="accordion" id="fasilitasAccordion">
-          <!-- Ruang Ibu -->
+          <!-- 1. Ruang Perawatan Ibu -->
           <div class="accordion-item">
-            <h2 class="accordion-header" id="f1">
+            <h2 class="accordion-header">
               <button
                 class="accordion-button"
                 type="button"
@@ -523,8 +567,9 @@
               data-bs-parent="#fasilitasAccordion"
             >
               <div class="accordion-body">
-                Ruangan bersih dan tenang dilengkapi aromaterapi serta musik
-                relaksasi agar ibu merasa nyaman selama perawatan.
+                Didesain dengan suasana tenang dan aroma relaksasi yang
+                menenangkan, Mom Room di Farah Mom & Baby Care menjadi tempat
+                terbaik untuk melepas penat...
                 <img
                   src="asset/mom_treatment_room.jpg"
                   alt="Ruang Perawatan Ibu"
@@ -532,9 +577,10 @@
               </div>
             </div>
           </div>
-          <!-- Area Baby Spa -->
+
+          <!-- 2. Area Baby Spa -->
           <div class="accordion-item">
-            <h2 class="accordion-header" id="f2">
+            <h2 class="accordion-header">
               <button
                 class="accordion-button collapsed"
                 type="button"
@@ -551,15 +597,16 @@
               data-bs-parent="#fasilitasAccordion"
             >
               <div class="accordion-body">
-                Kolam air hangat steril dengan alat khusus bayi, membantu
-                relaksasi dan stimulasi perkembangan motorik si kecil.
+                Dirancang dengan suasana hangat dan tenang, menciptakan
+                pengalaman pijat yang nyaman...
                 <img src="asset/baby_spa.jpg" alt="Area Baby Spa" />
               </div>
             </div>
           </div>
-          <!-- Ruang Tunggu -->
+
+          <!-- 3. Ruang Laktasi -->
           <div class="accordion-item">
-            <h2 class="accordion-header" id="f3">
+            <h2 class="accordion-header">
               <button
                 class="accordion-button collapsed"
                 type="button"
@@ -567,7 +614,7 @@
                 data-bs-target="#fac3"
               >
                 <i class="fa-solid fa-mug-hot me-2 text-terracotta"></i> Ruang
-                Tunggu & Konsultasi
+                Laktasi
               </button>
             </h2>
             <div
@@ -576,12 +623,39 @@
               data-bs-parent="#fasilitasAccordion"
             >
               <div class="accordion-body">
-                Ruang tunggu nyaman dengan sofa empuk dan minuman hangat. Ibu
-                dapat berdiskusi langsung dengan bidan atau terapis profesional
-                kami.
+                Ruang Laktasi nyaman dan privat. Ibu dapat berdiskusi langsung
+                dengan bidan atau terapis profesional kami.
+                <img src="asset/ruang_menyusui.jpg" alt="Ruang Laktasi" />
+              </div>
+            </div>
+          </div>
+
+          <!-- 4. Kolam Baby (Hydrotherapy) -->
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button
+                class="accordion-button collapsed"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#fac4"
+              >
+                <i class="fa-solid fa-water-ladder me-2 text-terracotta"></i>
+                Kolam Baby (Hydrotherapy)
+              </button>
+            </h2>
+            <div
+              id="fac4"
+              class="accordion-collapse collapse"
+              data-bs-parent="#fasilitasAccordion"
+            >
+              <div class="accordion-body">
+                Kolam air hangat khusus bayi dengan pengawasan terapis
+                profesional. Membantu perkembangan motorik, relaksasi, dan
+                menyenangkan untuk si kecil.
                 <img
-                  src="asset/ruang_menyusui.jpg"
-                  alt="Ruang Tunggu & Konsultasi"
+                  src="asset/kolam_renang.JPG"
+                  alt="Kolam Baby Hydrotherapy"
+                  class="mt-3"
                 />
               </div>
             </div>
@@ -670,19 +744,21 @@
       </div>
     </section>
 
-    <!--Location Section -->
+    <!-- Location Section -->
     <section id="location" class="fade-in">
       <div class="location-ornament">
         <i class="fa-solid fa-map-location-dot"></i>
       </div>
       <div class="container location-content">
         <div class="location-hero">
-          <h2>Temukan Kami di Hati Bogor yang Hijau</h2>
+          <h2>📍 Hadir di Jantung Kota Bogor yang Asri</h2>
           <p>
             Berlokasi strategis di pusat Kota Bogor, dekat Kebun Raya dan mudah
-            diakses dari BodeTabek. Klinik kami buka setiap hari untuk sambutan
-            hangat bagi bunda dan si kecil. Kami juga menyediakan home treatment
-            di wilayah sekitar!
+            dijangkau dari seluruh area Jabodetabek. Selain layanan di outlet,
+            Farah Mom & Baby Care juga menyediakan layanan
+            <strong>home treatment dengan</strong>
+            jangkauan hingga 15 KM dari lokasi kami, agar bunda bisa tetap
+            nyaman dirawat di rumah✨
           </p>
         </div>
         <div class="location-box">
@@ -718,8 +794,8 @@
               <i class="fas fa-phone location-icon"></i>
               <h6 class="info-title">Kontak Cepat</h6>
               <p class="info-text">
-                Telp: +62 811 8878 485<br />
-                WhatsApp: <a href="https://wa.me/628118878485">Chat Sekarang</a>
+                Telp: +62 812-8415-338<br />
+                WhatsApp: <a href="https://wa.me/628128415338">Chat Sekarang</a>
               </p>
             </div>
           </div>
@@ -744,32 +820,30 @@
       </div>
     </section>
 
-    <!-- Booking -->
-    <section id="booking" class="fade-in">
-      <h2 class="section-title">Booking Jadwal</h2>
-      <p class="subtitle">Ingin booking? Chat admin untuk reservasi</p>
-      <div class="container">
-        <div class="booking text-center">
-          <button
-            type="button"
-            class="btn btn-success btn-lg"
-            onclick="window.open('https://wa.me/628118878485', '_blank')"
-          >
-            Reservasi Jadwal
-          </button>
-        </div>
-      </div>
-    </section>
-
     <!-- Floating Buttons -->
     <div class="float-btn">
-      <a href="https://wa.me/628118878485" class="wa" target="_blank"
+      <a href="https://wa.me/628128415338" class="wa" target="_blank"
         ><i class="fab fa-whatsapp"></i
       ></a>
-      <a href="tel:+628118878485" class="call"
+      <a href="tel:+628128415338" class="call"
         ><i class="fa-solid fa-phone"></i
       ></a>
     </div>
+
+    <script>
+      // Muncul otomatis setelah 4 detik
+      setTimeout(function () {
+        document.getElementById("promoPopup").classList.remove("d-none");
+      }, 1000);
+
+      document
+        .getElementById("promoPopup")
+        .addEventListener("click", function (e) {
+          if (e.target === this) {
+            this.classList.add("d-none");
+          }
+        });
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
